--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.3",
+    "@turf/turf": "^7.1.0",
     "antd": "^5.21.5",
+    "d3-scale": "^4.0.2",
     "next": "15.0.1",
+    "or": "^0.2.0",
+    "pathfinding": "^0.4.18",
     "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "turf": "^3.0.14"
   },
   "devDependencies": {
     "@types/node": "^20",
