--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@turf/turf": "^7.1.0",
     "antd": "^5.21.5",
     "d3-scale": "^4.0.2",
+    "framer-motion": "^11.11.10",
     "next": "15.0.1",
     "or": "^0.2.0",
     "pathfinding": "^0.4.18",
